test/FAIL/setcmd/invalid_arguments/08_test_set.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="value overflow"
#-------

load boucle.o
set mem 0x1000 byte 0x123456789